Update Current Project

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <h3 class="project-title reveal-from-left"><strong>- Current Project</strong></h3>
 
 
-                            <p class="project-description reveal-from-top">I am currently working on integrating WebSocket into my 2D fighting game to enable multiplayer functionality. </p>
+                            <p class="project-description reveal-from-top">I've finished integrating the WebSocket element into the game. Now I just need to polish a dozen things.</p>
 
                             <h3 class="project-title reveal-from-left"><strong>- 2D Fighting Game</strong></h3>
 
