--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </div>
 
                     <div class="heading-wrapper">
-                        <h2 class="heading">Andrei's Online Profolio</h2>
+                        <h2 class="heading">Online Profolio</h2>
                     </div>
                     
                     <div class="content">
