--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <footer class="footer">
     <div class="footer-container">
         <p class="disclaimer">This is a personal online portfolio showcasing my skills and projects.</p>
-        <p class="disclaimer">Contact: 05andreiheng@gmail.com</p>
+        <p class="disclaimer">Contact: @gmail.com</p>
         <ul class="social-links">
             <li><a href="https://github.com/idk-mann" target="_blank" title="GitHub">GitHub</a></li>
             <li><a href="mailto:05andreiheng@gmail.com" target="_blank" title="Email">Email</a></li>
