--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <p class="disclaimer">Contact: @gmail.com</p>
         <ul class="social-links">
             <li><a href="https://github.com/idk-mann" target="_blank" title="GitHub">GitHub</a></li>
-            <li><a href="mailto:05andreiheng@gmail.com" target="_blank" title="Email">Email</a></li>
+            <li><a href="mailto:@gmail.com" target="_blank" title="Email">Email</a></li>
         </ul>
     </div>
 </footer>
