--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <p class="disclaimer">This is a personal online portfolio showcasing my skills and projects.</p>
         <p class="disclaimer">Contact: <span id="email-text"></span></p>
         <ul class="social-links">
-          <li><a href="https://github.com/yourusername" target="_blank" title="GitHub">GitHub</a></li>
+          <li><a href="https://github.com/idk-mann" target="_blank" title="GitHub">GitHub</a></li>
           <li><a href="#" id="email-link" title="Email">Email</a></li>
         </ul>
     </div>
@@ -107,7 +107,7 @@
 </html>
 
 <script>
-    const user = "yourname";
+    const user = "05andreiheng";
     const domain = "gmail.com";
     const email = user + "@" + domain;
     
